# soundscape-audio-analysis

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  LICENSE-CC-BY-4.0  NOTICE  README.md  ROADMAP.md  ROADMAP_ADDENDUM_caso_a_2026-05-15.md  ROADMAP_ADDENDUM_dossiers_p_t_2026-05-22.md  ROADMAP_ADDENDUM_marozzi_2026-05-15.md  ROADMAP_ADDENDUM_performance_memoria_2026-07-12.md  SKILL.md  pyproject.toml  requirements-embedding.txt  requirements.freeze.before_maad.txt  requirements.txt
references/: clap_academic_mapping_it.json  clap_families_it.json  clap_vocabulary_it.json  lessons_learned.md  panns_taxonomy_it.json  taxonomies.json
scripts/: __init__.py  agent_bridge.py  agent_payload.py  annotation_compare.py  aural_form.py  benchmark.py  benchmark_stats.py  clap_families.py  clap_mapping.py  cli.py  comparison.py  comparison_plots.py  config.py  contextual_hints.py  device.py  ecoacoustic.py  ecoacoustic_maad.py  embedding_match.py  generate_annotation_sheet.py  hum.py  interchange.py  io_loader.py  load_annotation.py  locale_it.py  md_renderer.py  multichannel.py  narrative.py  plotting.py  profiles.py  report_cmd.py  report_pdf.py  report_styles.py  report_synthesizer.py  runtime.py  semantic.py  semantic_clap.py  serialization.py  spectral.py  speech.py  speech_mediation.py  (+4 more)
templates/: INTEROP.md  agent_prompt.md  annotation_schema.json  golden_analysis_schema.md  interchange_schema_v1.1.json  interchange_schema_v1.2.json  report_synth_prompt.md
tests/: conftest.py  parity_compare.py  test_acceptance_villa_ficana.py  test_annotation_compare.py  test_benchmark.py  (+33 more)
(+38 files in other folders)
